# PDF-Text-Extraction-API

./: main.py  pyproject.toml
src/pdf_extraction/: app.py  frontend.py  main.py  test_api.py
