[project]
name = "pdf-text-extraction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "pypdfium2>=5.4.0",
    "python-multipart>=0.0.22",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
